--- a/src/page/layout/index.scss
+++ b/src/page/layout/index.scss
@@ -7,7 +7,7 @@
 }
 .container .page-header-cointainer {
   width: 100%;
-  height: 80px;
+  // height: 70px;
 }
 
 .container .aside-content-container {
@@ -27,5 +27,4 @@
 
 .container .aside-content-container .page-content-container {
   flex: 1;
-  background-color: brown;
 }
