--- a/src/components/banner/index.scss
+++ b/src/components/banner/index.scss
@@ -12,6 +12,11 @@
     filter: blur(10px);
     @include bg-image();
   }
+  .banner-download-wrapper {
+    position: relative;
+    display: flex;
+    width: $mainContentWidth;
+  }
   .banner-image-list-container {
     position: relative;
     width: 730px;
@@ -21,39 +26,6 @@
       width: 100%;
       height: 100%;
       @include bg-image();
-    }
-  }
-  .banner-btn-container {
-    position: absolute;
-    width: 730px;
-    height: 283px;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 5;
-    .arr {
-      position: absolute;
-      width: 37px;
-      height: 63px;
-      @include bg-image();
-      cursor: pointer;
-      z-index: 5;
-      &:hover {
-        background-color: #333;
-        opacity: 0.3;
-      }
-      &.arr-left {
-        top: 50%;
-        left: -60px;
-        transform: translateY(-50%);
-        background-image: url("../../assets/images/arrl.png");
-      }
-      &.arr-right {
-        top: 50%;
-        right: -60px;
-        transform: translateY(-50%);
-        background-image: url("../../assets/images/arrr.png");
-      }
     }
     .pagination-list {
       position: absolute;
@@ -77,6 +49,49 @@
       }
     }
   }
+}
+.download-client-container {
+  position: relative;
+  width: 252px;
+  height: 283px;
+  background-image: url("../../assets/images/download_client.png");
+  cursor: pointer;
+  background-position: 0px 0px;
+  background-repeat: no-repeat;
+  z-index: 4;
+}
+.banner-btn-container {
+  position: absolute;
+  width: 100%;
+  height: 283px;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 2;
+  .arr {
+    position: absolute;
+    width: 37px;
+    height: 63px;
+    @include bg-image();
+    cursor: pointer;
+    z-index: 5;
+    &:hover {
+      background-color: #333;
+      opacity: 0.3;
+    }
+    &.arr-left {
+      top: 50%;
+      left: -60px;
+      transform: translateY(-50%);
+      background-image: url("../../assets/images/arrl.png");
+    }
+    &.arr-right {
+      top: 50%;
+      right: -60px;
+      transform: translateY(-50%);
+      background-image: url("../../assets/images/arrr.png");
+    }
+  }
   .mask {
     position: absolute;
     top: 0;
@@ -84,6 +99,6 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.3);
-    z-index: 4;
+    z-index: 2;
   }
 }
