--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -1,5 +1,9 @@
-html {
+html,
+body {
   font-family: Arial, Helvetica, sans-serif;
+  color: #333;
+  font-size: 12px;
+  background-color: #f5f5f5;
 }
 
 ul,
