--- a/src/page/layout/index.scss
+++ b/src/page/layout/index.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 100%;
   height: 100vh;
-  overflow: hidden;
+  // overflow: hidden;
 }
 .container .page-header-cointainer {
   width: 100%;
