--- a/src/components/banner/index.scss
+++ b/src/components/banner/index.scss
@@ -22,9 +22,15 @@
     width: 730px;
     height: 283px;
     z-index: 3;
+    overflow: hidden;
     .banner-image {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
+      text-align: center;
+      transition: transform 200ms;
       @include bg-image();
     }
     .pagination-list {
