首页基本完成

--- a/src/components/section_header/index.scss
+++ b/src/components/section_header/index.scss
@@ -28,6 +28,9 @@
       cursor: pointer;
       .text {
         color: #666;
+        &:hover {
+          text-decoration: underline;
+        }
       }
       .more-icon {
         img {
