--- a/src/components/hot_recommend/index.scss
+++ b/src/components/hot_recommend/index.scss
@@ -32,6 +32,9 @@
             width: 14px;
             height: 14px;
             margin-right: 8px;
+            background-image: url("../../assets/images/iconall.png");
+            background-repeat: no-repeat;
+            background-position: 0 -23px;
           }
           .count {
             color: #ccc;
@@ -40,19 +43,14 @@
         .play-btn-container {
           .play-btn {
             display: block;
-            width: 15px;
-            height: 15px;
+            width: 16px;
+            height: 17px;
             cursor: pointer;
-            &.active {
-              display: none;
-            }
-          }
-          &:hover {
-            .play-btn {
-              display: none;
-              &.active {
-                display: block;
-              }
+            background-image: url("../../assets/images/iconall.png");
+            background-repeat: no-repeat;
+            background-position: 0 0;
+            &:hover {
+              background-position: 0 -60px;
             }
           }
         }
