--- a/src/components/section_header/index.scss
+++ b/src/components/section_header/index.scss
@@ -1,19 +1,21 @@
 .section-header-container {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 35px;
+  height: 40px;
   border-bottom: 2px solid #c10d0c;
   .left-field {
     display: flex;
     align-items: center;
     .section-header-icon {
-      margin: 0 10px;
-      img {
-        display: block;
-        width: 15px;
-        height: 15px;
+      .cicle {
+        height: 33px;
+        padding: 0 10px 0 24px;
+        background-position: -225px -153px;
+        background-image: url("../../assets/images/icons_bg.png");
+        background-repeat: no-repeat;
       }
     }
     .section-header-title {
@@ -33,12 +35,12 @@
         }
       }
       .more-icon {
-        img {
-          display: block;
-          width: 12px;
-          height: 12px;
-          margin-left: 4px;
-        }
+        width: 12px;
+        height: 12px;
+        margin-left: 4px;
+        background-position: 0 -240px;
+        background-image: url("../../assets/images/icons_bg.png");
+        background-repeat: no-repeat;
       }
     }
   }
