--- a/src/components/pagination/index.scss
+++ b/src/components/pagination/index.scss
@@ -1,25 +1,38 @@
-.my-pagination-list {
+.rc-pagination {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: 20px;
-  .prev-btn {
-    width: 69px;
-    height: 24px;
-    line-height: 24px;
-    color: #333;
-    text-align: left;
-    padding-left: 22px;
-    background-position: 0 -560px;
-    background-image: url("../../assets/images/button.png");
-    background-repeat: no-repeat;
-    border: 1px solid #ccc;
-    cursor: pointer;
-    &:hover {
-      background-position: 0 -590px;
+  .rc-pagination-prev {
+    .rc-pagination-item-link {
+      width: 69px;
+      height: 24px;
+      line-height: 24px;
+      color: #333;
+      text-align: left;
+      padding-left: 22px;
+      background-position: 0 -560px;
+      background-image: url("../../assets/images/button.png");
+      background-repeat: no-repeat;
+      border: 1px solid #ccc;
+      cursor: pointer;
+      &:after {
+        content: "上一页";
+        display: block;
+      }
+      &:hover {
+        background-position: 0 -590px;
+      }
+    }
+    &.rc-pagination-disabled {
+      .rc-pagination-item-link {
+        background-position: 0 -620px;
+        color: #cacaca;
+        cursor: default;
+      }
     }
   }
-  .pagination-item {
+  .rc-pagination-item {
     display: inline-block;
     margin: 0 5px 0 5px;
     border: 1px solid #ccc;
@@ -31,13 +44,7 @@
     background-color: #fff;
     line-height: 22px;
     cursor: pointer;
-    a {
-      display: block;
-      width: 100%;
-      height: 100%;
-      text-align: center;
-    }
-    &.selected {
+    &.rc-pagination-item-active {
       background-position: 0 -650px;
       border-color: #a2161b;
       color: #fff;
@@ -48,24 +55,70 @@
         cursor: default;
       }
     }
+    a {
+      display: block;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+    }
     &:hover {
       border-color: #666;
     }
   }
-  .next-btn {
-    width: 69px;
-    height: 24px;
-    line-height: 24px;
-    color: #333;
-    text-align: left;
-    padding-left: 12px;
-    background-position: -75px -560px;
-    background-image: url("../../assets/images/button.png");
-    background-repeat: no-repeat;
-    border: 1px solid #ccc;
-    cursor: pointer;
-    &:hover {
-      background-position: -75px -590px;
+  .rc-pagination-next {
+    .rc-pagination-item-link {
+      width: 69px;
+      height: 24px;
+      line-height: 24px;
+      color: #333;
+      text-align: left;
+      padding-left: 12px;
+      background-position: -75px -560px;
+      background-image: url("../../assets/images/button.png");
+      background-repeat: no-repeat;
+      border: 1px solid #ccc;
+      cursor: pointer;
+      &:after {
+        content: "下一页";
+        display: block;
+      }
+      &:hover {
+        background-position: -75px -590px;
+      }
+    }
+    &.rc-pagination-disabled {
+      .rc-pagination-item-link {
+        background-position: -75px -620px;
+        color: #cacaca;
+        cursor: default;
+      }
+    }
+  }
+  .rc-pagination-disabled {
+    &,
+    &:hover,
+    &:focus {
+      cursor: not-allowed;
+      .rc-pagination-item-link {
+        color: #cacaca;
+        cursor: default;
+      }
+    }
+  }
+  .rc-pagination-jump-prev,
+  .rc-pagination-jump-next {
+    outline: 0;
+
+    button {
+      background: transparent;
+      border: none;
+      cursor: pointer;
+      color: #666;
+    }
+
+    button:after {
+      display: block;
+      content: "...";
     }
   }
 }
