--- a/src/components/pagination/index.scss
+++ b/src/components/pagination/index.scss
@@ -38,9 +38,9 @@
     border: 1px solid #ccc;
     border-radius: 2px;
     vertical-align: middle;
-    width: 30px;
+    min-width: 30px;
     height: 22px;
-    // padding: 0 8px;
+    padding: 0 8px;
     background-color: #fff;
     line-height: 22px;
     cursor: pointer;
