--- a/src/components/songlist/index.scss
+++ b/src/components/songlist/index.scss
@@ -89,6 +89,7 @@
         .img {
           width: 50px;
           height: 50px;
+          @include bg-image();
         }
         .play-icon {
           width: 17px;
