--- a/src/container/top_album/index.scss
+++ b/src/container/top_album/index.scss
@@ -5,7 +5,7 @@
     height: 184px;
     padding: 10px 30px;
     background: #f5f5f5;
-    margin: 20px 0 36px 0;
+    margin: 20px 0 20px 0;
     border: 1px solid #d3d3d3;
     overflow: hidden;
     .album-list {
@@ -33,6 +33,7 @@
       .album-item {
         width: 118px;
         height: 150px;
+        margin-top: 20px;
         .img-container {
           position: relative;
           width: 100%;
