音乐播放器进一步完善

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -20,6 +20,13 @@ li {
   margin: 0 auto;
 }
 
+.text-decoration {
+  &:hover {
+    cursor: pointer;
+    text-decoration: underline;
+  }
+}
+
 // 分页组件UI
 // .my-pagination-list {
 //   display: flex;
