--- a/src/components/no_data/index.scss
+++ b/src/components/no_data/index.scss
@@ -5,15 +5,15 @@
   width: 100%;
   padding: 100px 0;
   .no-data-icon {
-    width: 64px;
-    height: 50px;
+    width: 36px;
+    height: 29px;
     margin-right: 18px;
-    background-image: url("../../assets/images/icon.png");
+    background-image: url("../../assets/images/playlist.png");
     background-repeat: no-repeat;
-    background-position: 0 -347px;
+    background-position: -138px 0;
   }
   .no-data-text {
-    font-size: 18px;
-    font-weight: bold;
+    color: #aaa;
+    font-size: 14px;
   }
 }
