--- a/src/page/layout/index.scss
+++ b/src/page/layout/index.scss
@@ -4,27 +4,24 @@
   width: 100%;
   height: 100vh;
   // overflow: hidden;
-}
-.container .page-header-cointainer {
-  width: 100%;
-  // height: 70px;
-}
-
-.container .aside-content-container {
-  width: 100%;
-  flex: 1;
-}
-
-.container .aside-content-container {
-  display: flex;
-}
-
-.container .aside-content-container .page-aside-container {
-  width: 200px;
-  margin-right: 20px;
-  background-color: blueviolet;
-}
-
-.container .aside-content-container .page-content-container {
-  flex: 1;
+  .page-header-cointainer {
+    width: 100%;
+  }
+  .aside-content-container {
+    display: flex;
+    width: 100%;
+    flex: 1;
+    .page-aside-container {
+      width: 200px;
+      margin-right: 20px;
+      background-color: blueviolet;
+    }
+    .page-content-container {
+      flex: 1;
+    }
+  }
+  .page-footer-container {
+    border-top: 1px solid #d3d3d3;
+    background: #f2f2f2;
+  }
 }
