歌单详情页-订阅歌单列表完成

--- a/src/components/comment_list/index.scss
+++ b/src/components/comment_list/index.scss
@@ -32,6 +32,7 @@
           }
           .comment-content {
             flex: 1;
+            white-space: pre-wrap;
           }
         }
         .meta-data {
