--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -11,6 +11,11 @@ li {
   list-style: none;
 }
 
+a {
+  color: #333;
+  text-decoration: dashed;
+}
+
 .App {
   min-width: 1400px;
 }
@@ -24,6 +29,14 @@ li {
   &:hover {
     cursor: pointer;
     text-decoration: underline;
+  }
+}
+.img {
+  a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
   }
 }
 
