--- a/src/components/hot_recommend/index.scss
+++ b/src/components/hot_recommend/index.scss
@@ -14,6 +14,12 @@
         width: 140px;
         height: 140px;
         @include bg-image();
+        a {
+          display: block;
+          width: 100%;
+          height: 100%;
+          cursor: pointer;
+        }
       }
       .meta-info {
         display: flex;
