--- a/src/components/pagination/index.scss
+++ b/src/components/pagination/index.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
+  margin: 20px 0;
   .rc-pagination-prev {
     .rc-pagination-item-link {
       width: 69px;
@@ -52,6 +52,7 @@
       background-repeat: no-repeat;
       cursor: default;
       a {
+        color: #fff;
         cursor: default;
       }
     }
