--- a/src/container/top5_artists/index.scss
+++ b/src/container/top5_artists/index.scss
@@ -28,7 +28,7 @@
       background-color: #fafafa;
       border: 1px solid #e9e9e9;
       cursor: pointer;
-      .pic {
+      .img {
         width: 62px;
         height: 62px;
         @include bg-image();
@@ -38,6 +38,9 @@
         font-size: 14px;
         font-weight: bold;
         margin-left: 14px;
+      }
+      &:hover {
+        background: #f4f4f4;
       }
     }
   }
