--- a/src/page/artist_detail/index.scss
+++ b/src/page/artist_detail/index.scss
@@ -68,6 +68,32 @@
   }
   .right-field {
     flex: 1;
-    padding: 20px 40px 40px 30px;
+    padding: 20px 30px 20px 30px;
+    .artist-list {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      margin-top: 20px;
+      .artist-item {
+        margin-left: 27.333px;
+        margin-bottom: 20px;
+        a {
+          display: block;
+        }
+        .img {
+          width: 50px;
+          height: 50px;
+          @include bg-image();
+        }
+        .name {
+          text-align: center;
+          margin-top: 5px;
+        }
+      }
+      .artist-item:nth-of-type(3n + 1) {
+        margin-left: 0;
+      }
+    }
   }
 }
