--- a/src/page/artist_detail/index.scss
+++ b/src/page/artist_detail/index.scss
@@ -5,18 +5,58 @@
   background: url("../../assets/images/wrap4.png") repeat-y center 0;
   .left-field {
     width: 708px;
-    padding: 47px 30px 40px 39px;
+    padding: 47px 30px 40px 38px;
     .artist-name {
       font-size: 24px;
       height: 34px;
       line-height: 34px;
     }
     .cover-image-container {
+      position: relative;
       .cover-image {
         width: 640px;
         height: 300px;
         @include bg-image();
         background-size: cover;
+      }
+      .mask {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: url("../../assets/images/ban_mask.png") no-repeat;
+      }
+      .btn-field {
+        display: flex;
+        align-items: center;
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+        .home-btn {
+          width: 96px;
+          height: 32px;
+          margin-right: 20px;
+          background: url("../../assets/images/btn_enter.png") no-repeat;
+          cursor: pointer;
+          a {
+            display: block;
+            width: 100%;
+            height: 100%;
+          }
+          &:hover {
+            background: url("../../assets/images/btn_enter_hvr.png") no-repeat;
+          }
+        }
+        .save-btn {
+          width: 76px;
+          height: 32px;
+          background: url("../../assets/images/btn_fav.png") no-repeat;
+          cursor: pointer;
+          &:hover {
+            background: url("../../assets/images/btn_fav_hvr.png") no-repeat;
+          }
+        }
       }
     }
     .link-list {
