--- a/src/page/artist_list/index.scss
+++ b/src/page/artist_list/index.scss
@@ -105,6 +105,11 @@
             background-position: 0 -740px;
             background-repeat: no-repeat;
             cursor: pointer;
+            a {
+              display: block;
+              width: 100%;
+              height: 100%;
+            }
           }
         }
       }
@@ -133,6 +138,11 @@
             background-position: 0 -740px;
             background-repeat: no-repeat;
             cursor: pointer;
+            a {
+              display: block;
+              width: 100%;
+              height: 100%;
+            }
           }
         }
       }
