--- a/src/page/user/index.scss
+++ b/src/page/user/index.scss
@@ -7,6 +7,7 @@
   border-width: 0 1px;
   .user-info-container {
     display: flex;
+    margin-bottom: 40px;
     .left-img {
       width: 188px;
       height: 188px;
