--- a/src/components/section_title/index.scss
+++ b/src/components/section_title/index.scss
@@ -5,8 +5,14 @@
   width: 100%;
   height: 34px;
   border-bottom: 1px solid #ccc;
+  margin-bottom: 20px;
   .title {
     color: #333;
     font-weight: bold;
+  }
+  .more-link {
+    a {
+      color: #666;
+    }
   }
 }
