歌曲详情页面大部分完成

--- a/src/components/album_songs/index.scss
+++ b/src/components/album_songs/index.scss
@@ -86,8 +86,8 @@
       .title {
         display: flex;
         align-items: center;
-        // width: 226px;
         flex: 1;
+        overflow: hidden;
         .play-icon {
           width: 17px;
           height: 17px;
