--- a/src/container/artist_top_song/index.scss
+++ b/src/container/artist_top_song/index.scss
@@ -98,6 +98,7 @@
         display: flex;
         flex: 1;
         align-items: center;
+        overflow: hidden;
         .play-icon {
           width: 17px;
           height: 17px;
