--- a/src/page/song_detail/index.scss
+++ b/src/page/song_detail/index.scss
@@ -1,6 +1,5 @@
-.album-detail-container {
+.song-detail-container {
   display: flex;
-  flex-wrap: wrap;
   border: 1px solid #d3d3d3;
   border-width: 0 1px;
   background: url("../../assets/images/wrap4.png") repeat-y center 0;
@@ -13,26 +12,17 @@
     padding: 20px 40px 40px 30px;
     overflow: hidden;
     .other-artist-album-list {
-      width: 100%;
       .album-item {
         display: flex;
         align-items: center;
-        width: 100%;
         margin-bottom: 15px;
-        a {
+        img {
           width: 50px;
           height: 50px;
           margin-right: 10px;
-          img {
-            width: 50px;
-            height: 50px;
-          }
         }
         .name-date {
-          flex: 1;
-          overflow: hidden;
           .name {
-            width: 100%;
             font-size: 14px;
             line-height: 25px;
             @include ellipsis();
