--- a/src/components/song_detail_baseinfo/index.scss
+++ b/src/components/song_detail_baseinfo/index.scss
@@ -52,6 +52,8 @@
       color: #666;
       margin-top: 6px;
       .label {
+        color: #999;
+        white-space: nowrap;
       }
       .text {
         a {
