--- a/src/container/playlist_baseinfo/index.scss
+++ b/src/container/playlist_baseinfo/index.scss
@@ -73,6 +73,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 25px;
+    font-size: 12px;
     .play-btn-container {
       display: flex;
       align-items: center;
@@ -137,7 +138,7 @@
       i {
         display: block;
         background-position: 0 -977px;
-        padding: 0 7px 0 28px;
+        padding: 0 5px 0 28px;
         height: 31px;
         line-height: 30px;
         width: 100%;
@@ -163,7 +164,7 @@
       i {
         display: block;
         background-position: 0 -1225px;
-        padding: 0 7px 0 28px;
+        padding: 0 5px 0 28px;
         height: 31px;
         line-height: 30px;
         width: 100%;
@@ -189,7 +190,7 @@
       i {
         display: block;
         background-position: 0 -2761px;
-        padding: 0 7px 0 28px;
+        padding: 0 5px 0 28px;
         height: 31px;
         line-height: 30px;
         width: 100%;
@@ -215,7 +216,7 @@
       i {
         display: block;
         background-position: 0 -1465px;
-        padding: 0 7px 0 28px;
+        padding: 0 5px 0 28px;
         height: 31px;
         line-height: 30px;
         width: 100%;
