--- a/src/page/layout/index.scss
+++ b/src/page/layout/index.scss
@@ -3,7 +3,6 @@
   flex-direction: column;
   width: 100%;
   height: 100vh;
-  // overflow: hidden;
   .page-header-cointainer {
     width: 100%;
   }
@@ -18,6 +17,7 @@
     }
     .page-content-container {
       flex: 1;
+      overflow: hidden;
     }
   }
   .page-footer-container {
