--- a/src/components/music_player/index.scss
+++ b/src/components/music_player/index.scss
@@ -312,6 +312,11 @@
         background-position: 0 -80px;
         background-image: url("../../assets/images/playbar.png");
         background-repeat: no-repeat;
+        a {
+          display: block;
+          width: 100%;
+          height: 100%;
+        }
       }
     }
     .base-info-bar-container {
@@ -321,7 +326,9 @@
         margin: 6px 0;
         .name {
           max-width: 300px;
-          color: #e8e8e8;
+          a {
+            color: #e8e8e8;
+          }
           @include ellipsis();
         }
         .songers {
@@ -330,7 +337,9 @@
           @include ellipsis();
           span {
             cursor: pointer;
-            color: #9b9b9b;
+            a {
+              color: #9b9b9b;
+            }
             &:hover {
               text-decoration: underline;
             }
@@ -348,6 +357,11 @@
           background-image: url("../../assets/images/playbar.png");
           background-position: -110px -103px;
           background-repeat: no-repeat;
+          a {
+            display: block;
+            width: 100%;
+            height: 100%;
+          }
           &:hover {
             background-position: -130px -103px;
           }
