首页toplist播放控制

--- a/src/components/songlist/index.scss
+++ b/src/components/songlist/index.scss
@@ -102,6 +102,9 @@
           &:hover {
             background-position: 0 -128px;
           }
+          &.active {
+            background-position: 0 -128px;
+          }
         }
         .song-name {
           flex: 1;
