--- a/src/container/boardlist/index.scss
+++ b/src/container/boardlist/index.scss
@@ -33,7 +33,13 @@
             position: absolute;
             width: 80px;
             height: 80px;
+            cursor: pointer;
             @include bg-image();
+            a {
+              display: block;
+              width: 100%;
+              height: 100%;
+            }
           }
         }
         .name-control-field {
