--- a/src/components/songlist/index.scss
+++ b/src/components/songlist/index.scss
@@ -102,8 +102,8 @@
           &:hover {
             background-position: 0 -128px;
           }
-          &.active {
-            background-position: 0 -128px;
+          &.is-playing {
+            background-position: -20px -128px;
           }
         }
         .song-name {
